# pandas_cookbook

./: .gitignore  README.md  pyproject.toml
recipes/: playground.ipynb
snippets/: default_notebook_setup.json
