[tool.poetry]
name = "recipes"
version = "0.1.0"
description = "Collection Point for interesting pandas code snippets"
authors = ["rschmidtner <RSchmidtner@NewYorker.de>"]

[tool.poetry.dependencies]
python = "^3.6.1"
pandas = "^1.1.5"
ipykernel = "^5.4.2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
